tests/fixtures/invalid/divmod_int_dict.py
# Cannot call divmod() with Int, Dict[str, int]
x = divmod(1, {"a": 1})
